--- a/templates/客服專區.html
+++ b/templates/客服專區.html
@@ -160,60 +160,60 @@
         <h2>客服專區</h2>
         <div class="container-fluid"></div>
         <div id="question">
-            <div>問題分類</div>
-            <div>
-                <form>
+            <form action="{{ url_for('result') }}" method="POST">
+                <div>問題分類</div>
+                <div>
                     <select name="YourQuestion" style="height: 30px;">
-                    　<option>請選擇分類</option>
-                    　<option value="1">餐點諮詢</option>
-                    　<option value="2">用餐問題諮詢</option>
-                    　<option value="3">服務心得回饋</option>
-                    　<option value="4">其他</option>
+                    <option>請選擇分類</option>
+                    <option value="1">餐點諮詢</option>
+                    <option value="2">用餐問題諮詢</option>
+                    <option value="3">服務心得回饋</option>
+                    <option value="4">其他</option>
                     </select>
-                </form>
-            </div>
-            <div>店別</div>
-            <div>
-                <select name="Shop" style="height: 30px;">
-                    　<option>請選擇店別</option>
-                    　<option value="5">黎明門市</option>
-                    　<option value="6">學府門市</option>
-                    　<option value="7">勝利門市</option>
+                </div>
+                <div>店別</div>
+                <div>
+                    <select name="Shop" style="height: 30px;">
+                    <option>請選擇店別</option>
+                    <option value="5">黎明門市</option>
+                    <option value="6">學府門市</option>
+                    <option value="7">勝利門市</option>
                     </select>
-                </form>
-            </div>
-            <div><br></div><div></div><div></div><div></div>
-            <div>姓名</div>
-            <div>
-                <form >
-                    <input type="text" name="name" style="height: 22px;">
+                </div>
+                <div><br></div><div></div><div></div><div></div>
+                <div>姓名</div>
+                <div>
+                    <input type="text" name="nm" style="height: 22px;" />
                     <input type="radio" name="location" value="Mr"> 先生
                     <input type="radio" name="location" value="Ms"> 小姐
-                </form>
-            </div>
-            <div>連絡電話</div>
-            <div>
-                <input type="text" name="phone" style="height: 22px;">
-            </div>
-            <div><br></div><div></div><div></div><div></div>
-            <div>行動電話</div>
-            <div>
-                <input type="text" name="telephone" style="height: 22px;">
-            </div>
-            <div>電子信箱</div>
-            <div>
-                <input type="text" name="email" style="height: 22px;">
-            </div>
-            <div><br></div><div></div><div></div><div></div>
-            <div>需求說明</div>
-            <div class="q7">
-                <textarea name="Content" style="width: 610px; height: 150px;"></textarea><br>
-                <button class="button" type="button" ><b>確認送出</b></button>
-            </div>
+                </div>
+                <div>連絡電話</div>
+                <div>
+                    <input type="text" name="phone" style="height: 22px;" />
+                </div>
+                <div><br></div><div></div><div></div><div></div>
+                <div>行動電話</div>
+                <div>
+                    <input type="text" name="telephone" style="height: 22px;" />
+                </div>
+                <div>電子信箱</div>
+                <div>
+                    <input type="text" name="email" style="height: 22px;" />
+                </div>
+                <div><br></div><div></div><div></div><div></div>
+                <div>需求說明</div>
+                <div class="q7">
+                    <textarea name="content" style="width: 610px; height: 150px;"></textarea><br>
+                    <input class="button" type="submit" value="確認送出" />
+                </div>
+            </form>
+
         </div>
 
 
     </article>
+
+    
     <nav> <!--聯絡方式-->
         <div>
         <img  src="/media/facebook.png">
