--- a/templates/最新優惠.html
+++ b/templates/最新優惠.html
@@ -115,7 +115,7 @@
     </div> 
     <!--背景-->
     <div class="img">    
-      <img class="pic" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/72774396_2643182002398903_4550756259451633664_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=3rCMppg1MkMAX9gTss9&_nc_ht=scontent-tpe1-1.xx&oh=06d3b2a48001a7f514d1ab12bd97d10c&oe=6094A506">
+      <img class="pic" src="media/全商背景.jpg">
   </div>
 
     <header><!--目錄-->
@@ -132,15 +132,15 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-      <img src="logo.jpg">
+      <img src="media/logo.jpg">
     </div> 
     <article><!--中間-->
 
         <div class="card" style="width: 18rem;">
-            <img  src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/159068363_3985473321503091_5068165981211801786_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=730e14&_nc_ohc=adK0i7atN64AX8n8oS7&_nc_ht=scontent-tpe1-1.xx&oh=9778c8de8b8bc435b81306ab54177f98&oe=609734CE" class="card-img-top" alt="...">
+            <img  src="media/開學.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">你開學，我放價!</h5>
               <p class="card-text">開學季憑學生證飲品<strong>9折</strong>~</p>
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/143288287_3880008005382957_2841986337079123289_n.png?_nc_cat=111&ccb=1-3&_nc_sid=730e14&_nc_ohc=5N8pTpygzOwAX90VimY&_nc_ht=scontent-tpe1-1.xx&oh=6a13dbf5180a4f2fc0d4e780bc0aaf26&oe=60939818" class="card-img-top" alt="...">
+            <img src="media/學府門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>學府門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -156,7 +156,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/145369177_3887521867964904_1139527315778350060_n.png?_nc_cat=101&ccb=1-3&_nc_sid=730e14&_nc_ohc=vHAtkHaS8N4AX-ybmM_&_nc_ht=scontent-tpe1-1.xx&oh=2a2d1d5272876d05977b407021d97d09&oe=60964346" class="card-img-top" alt="...">
+            <img src="media/勝利門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>勝利門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -164,7 +164,7 @@
             </div>
           </div>    
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/144013519_3880007955382962_9153129865215554196_n.png?_nc_cat=109&ccb=1-3&_nc_sid=730e14&_nc_ohc=uNTFSqCNV58AX9PW00d&_nc_ht=scontent-tpe1-1.xx&oh=93e61602c84dba65eec14ae72fd370c8&oe=60963512" class="card-img-top" alt="...">
+            <img src="media/黎明門市.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"><strong>黎明門市</strong>過年營業時間</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -172,15 +172,15 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/133301649_3791767030873722_5917976136042221629_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=730e14&_nc_ohc=mlO4eUXlZ68AX-UPWxB&_nc_ht=scontent-tpe1-1.xx&oh=b782df51b79b0be993413b8bc6e01e0b&oe=60954DE0" class="card-img-top" alt="...">
+            <img src="media/可頌.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">套餐組合</h5>
-              <p class="card-text"><strong>勝利門市</strong>限定活動</p>
+              <h5 class="card-title">胖可頌升級活動</h5>
+              <p class="card-text"><strong>搭配湯品</strong>只要99元</p>
               <a href="https://www.facebook.com/AppleGreenCoffee/" class="btn btn-danger" target="_blank">Learn More</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/107871290_3293413594042404_2543079329874255603_n.png?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=ehuAmQ2WFkIAX8kf2K2&_nc_ht=scontent-tpe1-1.xx&oh=00dd16d1a2805e7df75d91c40a3c4bc6&oe=609571CC" class="card-img-top" alt="...">
+            <img src="media/冰檸.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">冰檸日</h5>
               <p class="card-text">冰檸翡翠周五<strong>第二杯半價</strong></p>
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/105908155_3274191085964655_4949222430375055333_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=730e14&_nc_ohc=banH3yItUlEAX96WqsL&_nc_ht=scontent-tpe1-1.xx&oh=2660382ae783ac874d87250a7bb5d97a&oe=60945D85" class="card-img-top" alt="...">
+            <img src="media/芒果.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">季節限定!!</h5>
               <p class="card-text">芝士芒果嘗鮮價<strong>$109</strong></p>
@@ -196,7 +196,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.6435-9/123054426_3628032120580548_7476121667047444988_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=gbyLQMpqgXwAX8lTdBE&_nc_ht=scontent.frmq2-1.fna&oh=f95854bcd4d5b794797ba058fbacde7f&oe=6096E80E" class="card-img-top" alt="...">
+            <img src="media/盛開.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">勝利門市歡慶開幕!</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -204,7 +204,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.6435-9/122052003_3604955256221568_5218621267718386058_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=YjwGR8aqn7cAX8cya1d&_nc_oc=AQmCDvAgkYFD85W1j9ZSie7Cb5l5EDcneK7AtpuSQ9bSIqVcB1-BHQPl2XEw3_WnYy8&_nc_ht=scontent.frmq2-1.fna&oh=d0234f24b8e979f5e716d01ab27be8fa&oe=6093EC8A" class="card-img-top" alt="...">
+            <img src="media/勝營.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">勝利門市試營運活動</h5>
               <p class="card-text">詳情請進入網址</p>
@@ -216,10 +216,10 @@
 
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="facebook.png">
-        <img  src="instagram.png">
-        <img  src="whatsapp.png">
-        <img  src="youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -230,7 +230,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/67671346_2507707969279641_6272034196542193664_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=myTcjz9oZCoAX-4qbBi&_nc_ht=scontent-tpe1-1.xx&oh=49d1e5f01fca24a8f8ac86f3a0427c9e&oe=6095900D">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
