--- a/templates/門市資訊.html
+++ b/templates/門市資訊.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>   
     <!--放大鏡-->
 	<script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-    <script src="jquery.elevatezoom.min.js"></script>
+    <script src="media/jquery.elevatezoom.min.js"></script>
 
     <script type="text/javascript" >
             $(document).ready(function()
@@ -177,20 +177,20 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="logo.jpg">
+        <img src="media/logo.jpg">
     <!--背景-->
     </div> 
     <div class="img">    
-        <img class="pic" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/72774396_2643182002398903_4550756259451633664_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=3rCMppg1MkMAX9gTss9&_nc_ht=scontent-tpe1-1.xx&oh=06d3b2a48001a7f514d1ab12bd97d10c&oe=6094A506">
+        <img class="pic" src="media/全商背景.jpg">
     </div>
     <article><!--地圖+門市資料-->
         
         <div>
             <h2 id="01"><i class="fas fa-coffee"></i> 黎明門市</h2>
-            <img  id="zoom_03" src="黎明店小.jpg" data-zoom-image="黎明店.jpg">
+            <img  id="zoom_03" src="media/黎明店小.jpg" data-zoom-image="media/黎明店.jpg">
             <div class="address">
                 門市名稱：黎明門市 </br>
                 <a href="tel:+886423808217"> 門市電話：04-2380-8217</a></br>
@@ -202,7 +202,7 @@
         </div>
         <div>
             <h2 id="02"><i class="fas fa-coffee"></i> 學府門市</h2>
-            <img  id="zoom_02" src="學府店小.jpg" data-zoom-image="學府店.jpg">
+            <img  id="zoom_02" src="media/學府店小.jpg" data-zoom-image="media/學府店.jpg">
             <div class="address">
                 門市名稱：學府門市 </br>
                 <a href="tel:+886422870588">門市電話：04-2287-0588</a></br>
@@ -214,7 +214,7 @@
         </div>
         <div>
             <h2 id="03"><i class="fas fa-coffee"></i> 勝利門市</h2>
-            <img  id="zoom_01" src="勝利店小.jpg" data-zoom-image="勝利店.jpg">
+            <img  id="zoom_01" src="media/勝利店小.jpg" data-zoom-image="media/勝利店.jpg">
             <div class="address">
                 門市名稱：勝利門市 </br>
                 <a href="tel:+886425310309"> 門市電話：04-2531-0309</a></br>
@@ -244,10 +244,10 @@
     
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="facebook.png">
-        <img  src="instagram.png">
-        <img  src="whatsapp.png">
-        <img  src="youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -258,7 +258,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/67671346_2507707969279641_6272034196542193664_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=myTcjz9oZCoAX-4qbBi&_nc_ht=scontent-tpe1-1.xx&oh=49d1e5f01fca24a8f8ac86f3a0427c9e&oe=6095900D">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
