--- a/templates/全部商品.html
+++ b/templates/全部商品.html
@@ -23,7 +23,7 @@
     </script>
 
     <!--菜單-->
-    <script type="text/javascript" src="modernizr.2.5.3.min.js"></script>
+    <script type="text/javascript" src="media/modernizr.2.5.3.min.js"></script>
 
 
     <title> 🍏 蘋果綠咖啡 ☕ </title>
@@ -103,7 +103,7 @@
 
     <!--背景-->
     <div class="img">    
-        <img class="pic" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/162244481_4008144685902621_1953147895307087262_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=730e14&_nc_ohc=3cQ2gregcGcAX9Q91Cn&_nc_ht=scontent-tpe1-1.xx&oh=7a50cb96a2b9022e5a41bcb4c6c38c2d&oe=60948205">
+        <img class="pic" src="media/全商背景.jpg">
     </div>
 
     
@@ -121,26 +121,26 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="logo.jpg">
+        <img src="media/logo.jpg">
     </div> 
         <article><!--菜單--> 
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/72139900_2611811705535933_8958672236034654208_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=K3WtfEsS66UAX82Sf9u&_nc_ht=scontent-tpe1-1.xx&oh=d53e127d352fd7e4f7af9b6cffab8c61&oe=6093AE29)"></div>
-                    <div style="background-image:url(1-1.jpg)"></div>
-                    <div style="background-image:url(1-2.jpg)"></div>
-                    <div style="background-image:url(2-1.jpg)"></div>
-                    <div style="background-image:url(2-2.jpg)"></div>
-                    <div style="background-image:url(3-1.jpg)"></div>
-                    <div style="background-image:url(3-2.jpg)"></div>
-                    <div style="background-image:url(4-1.jpg)"></div>
-                    <div style="background-image:url(4-2.jpg)"></div>
-                    <div style="background-image:url(5-1.jpg)"></div>
-                    <div style="background-image:url(5-2.jpg)"></div>
+                    <div style="background-image:url(media/封面.jpg)"></div>
+                    <div style="background-image:url(media/1-1.jpg)"></div>
+                    <div style="background-image:url(media/1-2.jpg)"></div>
+                    <div style="background-image:url(media/2-1.jpg)"></div>
+                    <div style="background-image:url(media/2-2.jpg)"></div>
+                    <div style="background-image:url(media/3-1.jpg)"></div>
+                    <div style="background-image:url(media/3-2.jpg)"></div>
+                    <div style="background-image:url(media/4-1.jpg)"></div>
+                    <div style="background-image:url(media/4-2.jpg)"></div>
+                    <div style="background-image:url(media/5-1.jpg)"></div>
+                    <div style="background-image:url(media/5-2.jpg)"></div>
                 </div>
             </div>
         </div>
@@ -167,9 +167,9 @@
         
         yepnope({
             test : Modernizr.csstransforms,
-            yep: ['turn.js'],
-            nope: ['turn.html4.min.js'],
-            both: ['basic.css'],
+            yep: ['media/turn.js'],
+            nope: ['media/turn.html4.min.js'],
+            both: ['media/basic.css'],
             complete: loadApp
         });
         
@@ -180,10 +180,10 @@
 
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="facebook.png">
-        <img  src="instagram.png">
-        <img  src="whatsapp.png">
-        <img  src="youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -194,7 +194,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/67671346_2507707969279641_6272034196542193664_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=myTcjz9oZCoAX-4qbBi&_nc_ht=scontent-tpe1-1.xx&oh=49d1e5f01fca24a8f8ac86f3a0427c9e&oe=6095900D">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
