--- a/templates/加入我們.html
+++ b/templates/加入我們.html
@@ -63,10 +63,15 @@
         .line{
             margin-top: 40px;
             margin-bottom: 70px;
-            margin-left: 420px;
             text-align: center;
+            align-self: center;
         }
 
+
+        article{
+            display: flex;
+            flex-direction: column;
+        }
         article>h2{
             text-align: center;
             color: rgb(255, 255, 255);
@@ -80,9 +85,10 @@
             display: grid;
             grid-template-columns: [c1] 100px [c2] 500px;
             grid-template-rows: repeat(4);
-            padding-left: 450px;
             margin-bottom: 50px;
             font-size: 18px;
+            align-self: center;
+
         }
         .d1{
             grid-column: 1 / 3;
@@ -181,13 +187,13 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
         <div class="float2"><!--漂浮小盒子2-->
-            <img src="logo.jpg">
+            <img src="media/logo.jpg">
         </div> 
     <div class="img">    
-        <img class="pic" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/72774396_2643182002398903_4550756259451633664_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=3rCMppg1MkMAX9gTss9&_nc_ht=scontent-tpe1-1.xx&oh=06d3b2a48001a7f514d1ab12bd97d10c&oe=6094A506">
+        <img class="pic" src="media/全商背景.jpg">
     </div>
     <article><!--中間文章-->
         <div class="line">
@@ -293,10 +299,10 @@
     </article>
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="facebook.png">
-        <img  src="instagram.png">
-        <img  src="whatsapp.png">
-        <img  src="youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -307,7 +313,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/67671346_2507707969279641_6272034196542193664_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=myTcjz9oZCoAX-4qbBi&_nc_ht=scontent-tpe1-1.xx&oh=49d1e5f01fca24a8f8ac86f3a0427c9e&oe=6095900D">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
