--- a/templates/品牌故事.html
+++ b/templates/品牌故事.html
@@ -132,22 +132,22 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
     <div class="float2"><!--漂浮小盒子2-->
-        <img src="logo.jpg">
+        <img src="media/logo.jpg">
     </div> 
     <article>
         <h2>品牌故事</h2>
         
         <div class="woo">
-            <img class="img1 "src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/122401692_3604955589554868_1611014057350771862_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=5zteH3YATpcAX9yoKYF&_nc_ht=scontent-tpe1-1.xx&oh=d15cb5349dfdb7ef31af227b58fd8d7b&oe=60962EEC">
+            <img class="img1 "src="media/品1.jpg">
             <p><span>蘋</span>果綠咖啡 Apple Green Coffee 是多那之咖啡新品牌。</p>
             <p>有鑑於市場的趨勢變化，從傳統轉型現代化的經營，以穩健紮實的腳步陸續展店，至今已有3間門市遍及台中。讓顧客能一同體驗這一個能感動您的視覺、味覺、嗅覺的新飲食創意店，提供了長時間服務的門市，秉持著服務加時不加價的原則。</p>
             
             <p>注重食材的挑選，堅持嚴選最新鮮的食材蔬<span>果</span>烹飪製作；對於價格提供給顧客經濟實惠的售價，滿足顧客需求，兼顧美味以及健康的趨勢。為了滿足支持蘋果綠的顧客，長期以來維持著半年或不定期的上市新產品之傳統，更能品嚐到新潮美味的商品，滿足您求新求變的新鮮感；商品的多樣化及各大節慶獨具巧思的各類創意商品，深獲廣大顧客響應。</p>
             
-            <img class="img2 "src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/122119196_3604955449554882_8967670283026246185_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=8bfeb9&_nc_ohc=3QxSK2XuJycAX9L55fn&_nc_ht=scontent-tpe1-1.xx&oh=ad587e9d543b1aa909871c5cff9fe6ce&oe=6098062D">
+            <img class="img2 "src="media/品2.jpg">
             <p>開放式消費空間，以明亮、現代化的裝潢格局、巧思的室內與室外的座憩空間及視覺上的舒適感，讓顧客能更享受購物樂趣；更有即時性外送服務，以服務顧客居家辦公享受美食的便利服務。
                本著永續、促進<span>綠</span>色經濟與創新、自然、健康、衛生的理念下，奮鬥不懈為提升餐飲競爭力。
 
@@ -158,10 +158,10 @@
     </article>
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="facebook.png">
-        <img  src="instagram.png">
-        <img  src="whatsapp.png">
-        <img  src="youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -172,7 +172,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/67671346_2507707969279641_6272034196542193664_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=myTcjz9oZCoAX-4qbBi&_nc_ht=scontent-tpe1-1.xx&oh=49d1e5f01fca24a8f8ac86f3a0427c9e&oe=6095900D">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
