--- a/templates/客服專區.html
+++ b/templates/客服專區.html
@@ -69,20 +69,27 @@
             margin-left: 20vw;margin-right:20vw ;
         }
         #question{
-            display: grid;
-            grid-template-columns: [c1] 100px [c2] 350px [c3] 100px [c4] 350px;
-            grid-template-rows: repeat(6);
             padding-top: 30px;
             padding-bottom: 135px;
-            padding-left: 400px;
             font-size: 20px;
             color: rgba(14, 48, 11, 0.87);
+            align-self: center;
+            
         }
-        .q7{
-            grid-column: 2 / 5;
+
+        article{
+            display: flex;
+            flex-direction: column;
+
         }
+
+        #qq{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
         .button{
-            grid-column: 1 / 5;
             margin-left: 515px;
             background-color: rgba(219, 219, 208, 0.897);
             color: rgba(27, 66, 24, 0.808);
@@ -146,62 +153,70 @@
         <div class="box2" onclick="location.href='客服專區.html'">客服專區</div>
     </header>
     <div class="float"><!--漂浮小盒子1-->
-        <img src="/media/9優惠.png"> 
+        <img src="media/9優惠.png"> 
     </div> 
         <div class="float2"><!--漂浮小盒子2-->
-            <img src="/media/logo.jpg">
+            <img src="media/logo.jpg">
         </div> 
         <!--背景-->
     </div> 
     <div class="img">    
-        <img class="pic" src="/media/coffee-cup-working-happy.jpg">
+        <img class="pic" src="media/全商背景.jpg">
     </div>
     <article><!--中間文章-->
         <h2>客服專區</h2>
         <div class="container-fluid"></div>
         <div id="question">
             <form action="{{ url_for('result') }}" method="POST">
-                <div>問題分類</div>
-                <div>
-                    <select name="YourQuestion" style="height: 30px;">
-                    <option>請選擇分類</option>
-                    <option value="1">餐點諮詢</option>
-                    <option value="2">用餐問題諮詢</option>
-                    <option value="3">服務心得回饋</option>
-                    <option value="4">其他</option>
-                    </select>
-                </div>
-                <div>店別</div>
-                <div>
-                    <select name="Shop" style="height: 30px;">
-                    <option>請選擇店別</option>
-                    <option value="5">黎明門市</option>
-                    <option value="6">學府門市</option>
-                    <option value="7">勝利門市</option>
-                    </select>
-                </div>
-                <div><br></div><div></div><div></div><div></div>
-                <div>姓名</div>
-                <div>
-                    <input type="text" name="nm" style="height: 22px;" />
-                    <input type="radio" name="location" value="Mr"> 先生
-                    <input type="radio" name="location" value="Ms"> 小姐
-                </div>
-                <div>連絡電話</div>
-                <div>
-                    <input type="text" name="phone" style="height: 22px;" />
+                <div id='qq'>
+                    <div>問題分類</div>
+                    <div>
+                        <select name="YourQuestion" style="height: 30px;">
+                        <option>請選擇分類</option>
+                        <option value="1">餐點諮詢</option>
+                        <option value="2">用餐問題諮詢</option>
+                        <option value="3">服務心得回饋</option>
+                        <option value="4">其他</option>
+                        </select>
+                    </div>
+                    <div>店別</div>
+                    <div>
+                        <select name="Shop" style="height: 30px;">
+                        <option>請選擇店別</option>
+                        <option value="5">黎明門市</option>
+                        <option value="6">學府門市</option>
+                        <option value="7">勝利門市</option>
+                        </select>
+                    </div>
                 </div>
                 <div><br></div><div></div><div></div><div></div>
-                <div>行動電話</div>
-                <div>
+                <div id='qq'>
+                    <div>您的姓名</div>
+                    <div>
+                        <input type="text" name="nm" style="height: 22px;" />
+                    </div>
+                        <input type="radio" name="location" value="Mr"> 先生
+                        <input type="radio" name="location" value="Ms"> 小姐
+                </div>
+                <br/>
+                <div id='qq'>
+                    <div>連絡電話</div>
+                    <div>
+                        <input type="text" name="phone" style="height: 22px;" />
+                    </div>
+                    <div>行動電話</div>
                     <input type="text" name="telephone" style="height: 22px;" />
                 </div>
-                <div>電子信箱</div>
                 <div>
-                    <input type="text" name="email" style="height: 22px;" />
+                </div> <br/>
+                <div id='qq'>
+                    <div>電子信箱 </div>
+                    <div>
+                        <input type="text" name="email" style="height: 22px;width: 32vw;" />
+                    </div>
                 </div>
                 <div><br></div><div></div><div></div><div></div>
-                <div>需求說明</div>
+                <div>需求說明</div><br/>
                 <div class="q7">
                     <textarea name="content" style="width: 610px; height: 150px;"></textarea><br>
                     <input class="button" type="submit" value="確認送出" />
@@ -216,10 +231,10 @@
     
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="/media/facebook.png">
-        <img  src="/media/instagram.png">
-        <img  src="/media/whatsapp.png">
-        <img  src="/media/youtube.png">
+        <img  src="media/facebook.png">
+        <img  src="media/instagram.png">
+        <img  src="media/whatsapp.png">
+        <img  src="media/youtube.png">
         </div>
             <span>　　</span> 
             <div class="num">連絡電話：04-2380-8217<i class="fas fa-mug-hot"></i>
@@ -230,7 +245,7 @@
     <footer></footer>
         <!--游標-->
     
-        <img class="apple" src="/media/logo.jpg">
+        <img class="apple" src="media/logo.jpg">
 
         <!--icon-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
