--- a/templates/加入我們.html
+++ b/templates/加入我們.html
@@ -299,7 +299,7 @@
     </article>
     <nav> <!--聯絡方式-->
         <div>
-        <img  src="media/facebook.png">
+        <img  src="../media/facebook.png">
         <img  src="media/instagram.png">
         <img  src="media/whatsapp.png">
         <img  src="media/youtube.png">
